Run db migrations for gha ci as part of test run rather than as separate step

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,13 +55,10 @@ jobs:
       - name: npm install ci
         run: npm ci
 
-      - name: setup test postgres
-        run: npm run dbmigratetest up
-        env:
-          TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
-          APP_ENV: test
       - name: run contract tests
-        run: npm run test:contract
+        run: |
+          npm run dbmigratetest up
+          npm run test:contract
         env:
           TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
           APP_ENV: test
