--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,16 +1,9 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Virtual Visits CI
 
-on:
-  push:
-    branches: [master, gha-ci]
-  pull_request:
-    branches: [master]
+on: [push, pull_request]
 
 jobs:
-  unit-tests:
+  build-and-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
