--- a/circle.yml
+++ b/circle.yml
@@ -26,7 +26,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install ci
+            - run: npm ci
             - run: npm rebuild node-sass
             - run: npm run build
   test:
