Add temporary condition to only run gha ci tests on MT's repo
This is to prevent the GHA CI tests being run in the forked repos belonging to the trusts - since those repos don't yet have the necessary
github secrets set up to be able to run the contract and e2e tests on GHA, the tests will fail and therefore will prevent the fork sync PRs from merging

--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -49,6 +49,7 @@ jobs:
       - name: npm install ci
         run: npm ci
 
+        if: (github.repository == 'madetech/nhs-virtual-visit')
       - name: run contract tests
         run: |
           npm run dbmigratetest up
@@ -86,6 +87,7 @@ jobs:
         with:
           node-version: 12
 
+        if: (github.repository == 'madetech/nhs-virtual-visit')
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
