--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -60,6 +60,7 @@ jobs:
           SMS_JOIN_TEMPLATE_ID: ${{ secrets.SMS_JOIN_TEMPLATE_ID }}
           EMAIL_INITIAL_TEMPLATE_ID: ${{ secrets.EMAIL_INITIAL_TEMPLATE_ID }}
           EMAIL_JOIN_TEMPLATE_ID: ${{ secrets.EMAIL_JOIN_TEMPLATE_ID }}
+          TEST_EVENT: ${{secrets.TEST_EVENT}}
 
   e2e-tests:
     runs-on: ubuntu-latest
@@ -102,6 +103,7 @@ jobs:
           EMAIL_JOIN_TEMPLATE_ID: ${{ secrets.EMAIL_JOIN_TEMPLATE_ID }}
           AZURE_FUNCTION_KEY: ${{secrets.AZURE_FUNCTION_KEY}}
           AZURE_FUNCTION_URL: ${{secrets.AZURE_FUNCTION_URL}}
+          TEST_EVENT: ${{secrets.TEST_EVENT}}
 
   migration-tests:
     runs-on: ubuntu-latest
