--- a/.github/workflows/azure_virtualvisitsdemo.yml
+++ b/.github/workflows/azure_virtualvisitsdemo.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  if: (github.repository == 'madetech/nhs-virtual-visit')
+  if: ${{ github.repository_owner == 'madetech' }}
   docker:
     runs-on: ubuntu-latest
 
