Try different syntax for GitHub actions if statement

--- a/.github/workflows/azure_virtualvisitsdemo.yml
+++ b/.github/workflows/azure_virtualvisitsdemo.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  if: ${{ github.repository_owner == 'madetech' }}
+  if: github.repository_owner == 'madetech'
   docker:
     runs-on: ubuntu-latest
 
