--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -138,8 +138,7 @@ jobs:
           TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
           APP_ENV: test
   tagAndRelease:
-    runs-on: ubuntu--latest
-    
+    runs-on: ubuntu-latest
     steps:
       - name: Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v3
