--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -137,8 +137,9 @@ jobs:
         env:
           TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
           APP_ENV: test
-  tagAndRelease:
+  tag-and-release:
     runs-on: ubuntu-latest
+    needs: [contract-tests, build-and-unit-tests, migration-tests, e2e-tests]
     steps:
       - name: Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v3
