--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -146,8 +146,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Conventional Changelog Action
+      - uses: TriPSs/conventional-changelog-action@v3
         id: changelog
-        uses: TriPSs/conventional-changelog-action@v3
         with:
           github-token: ${{ secrets.github_token }}
           output-file: 'CHANGELOG.md'
