--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -62,7 +62,7 @@ jobs:
           npm run dbmigratetest up
           npm run test:contract
         env:
-          TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
+          PG_TEST_DB_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
           APP_ENV: test
           SMS_INITIAL_TEMPLATE_ID: ${{ secrets.SMS_INITIAL_TEMPLATE_ID }}
           SMS_JOIN_TEMPLATE_ID: ${{ secrets.SMS_JOIN_TEMPLATE_ID }}
@@ -105,8 +105,8 @@ jobs:
           SMS_JOIN_TEMPLATE_ID: ${{ secrets.SMS_JOIN_TEMPLATE_ID }}
           SMS_UPDATED_VISIT_TEMPLATE_ID: ${{ secrets.SMS_UPDATED_VISIT_TEMPLATE_ID }}
           JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          PG_DB_URL: ${{ secrets.DATABASE_URL }}
+          PG_TEST_DB_URL: ${{ secrets.TEST_DATABASE_URL }}
           WHEREBY_API_KEY: ${{ secrets.WHEREBY_API_KEY }}
           WHEREBY_SUBDOMAIN: ${{ secrets.WHEREBY_SUBDOMAIN }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
@@ -128,7 +128,7 @@ jobs:
           build: npm run dbmigratetest up
           start: npm run test:server
         env:
-          TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
+          PG_TEST_DB_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
           APP_ENV: test
           JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
           SMS_INITIAL_TEMPLATE_ID: ${{ secrets.SMS_INITIAL_TEMPLATE_ID }}
@@ -173,7 +173,7 @@ jobs:
           npm run dbmigratetest up
           npm run test:migration
         env:
-          TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
+          PG_TEST_DB_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
           APP_ENV: test
   tag-and-release:
     runs-on: ubuntu-latest
@@ -214,8 +214,8 @@ jobs:
           SMS_JOIN_TEMPLATE_ID: ${{ secrets.SMS_JOIN_TEMPLATE_ID }}
           SMS_UPDATED_VISIT_TEMPLATE_ID: ${{ secrets.SMS_UPDATED_VISIT_TEMPLATE_ID }}
           JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          PG_DB_URL: ${{ secrets.DATABASE_URL }}
+          PG_TEST_DB_URL: ${{ secrets.TEST_DATABASE_URL }}
           WHEREBY_API_KEY: ${{ secrets.WHEREBY_API_KEY }}
           WHEREBY_SUBDOMAIN: ${{ secrets.WHEREBY_SUBDOMAIN }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
