--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
     "start": "NODE_ENV=production node server.js",
     "cleandb": "node db/scripts/cleanup_scheduled_calls.js",
     "db:seed": "node db/scripts/seed_database.js",
-    "dbmigrate": "db-migrate --migrations-dir db/migrations/",
+    "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
     "dbmigratetest": "db-migrate --migrations-dir 'db/migrations/' -e test",
     "dbmigratedry": "db-migrate --dry-run --migrations-dir 'db/migrations/'",
     "postinstall": "test -n \"$NONPMPOSTINSTALL\" || npm run build"
   },
   "dependencies": {
-    "@sentry/browser": "^5.15.5",
-    "@sentry/node": "^5.15.5",
-    "@sentry/webpack-plugin": "^1.11.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
+    "@sentry/browser": "^5.29.2",
+    "@sentry/node": "^5.29.2",
+    "@sentry/webpack-plugin": "^1.14.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^26.6.3",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
@@ -49,28 +49,28 @@
     "db-migrate-pg": "^1.2.1",
     "dotenv-load": "^2.0.0",
     "express": "^4.17.1",
-    "google-libphonenumber": "^3.2.9",
+    "google-libphonenumber": "^3.2.15",
     "heroku-ssl-redirect": "0.0.4",
     "isomorphic-unfetch": "^3.0.0",
-    "jest": "^26.4.2",
-    "jest-css-modules-transform": "^4.0.1",
+    "jest": "^26.6.3",
+    "jest-css-modules-transform": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mockdate": "^2.0.5",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "nanoid": "^3.1.3",
+    "nanoid": "^3.1.20",
     "next": "9.5.4",
     "next-absolute-url": "^1.2.2",
     "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.1.0",
     "node-sass": "^4.14.0",
-    "nookies": "^2.2.4",
+    "nookies": "^2.5.0",
     "notifications-node-client": "^4.7.3",
-    "pg-promise": "^10.5.2",
-    "query-string": "^6.12.1",
+    "pg-promise": "^10.8.6",
+    "query-string": "^6.13.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "uuid": "^8.1.0",
+    "uuid": "^8.3.2",
     "uuid-validate": "0.0.3",
     "winston": "^3.3.3"
   },
