--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cleandb": "node db/scripts/cleanup_scheduled_calls.js",
     "db:seed": "node db/scripts/seed_database.js",
     "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
-    "dbmigratetest": "db-migrate --migrations-dir db/migrations/ -e test",
+    "dbmigratetest": "db-migrate --migrations-dir 'db/migrations/' -e test",
     "dbmigratedry": "db-migrate --dry-run --migrations-dir 'db/migrations/'",
     "postinstall": "test -n \"$NONPMPOSTINSTALL\" || npm run build"
   },
@@ -63,6 +63,7 @@
     "next-absolute-url": "^1.2.2",
     "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.1.0",
+    "node-sass": "^4.14.0",
     "nookies": "^2.2.4",
     "notifications-node-client": "^4.7.3",
     "pg-promise": "^10.5.2",
@@ -77,7 +78,6 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.3",
     "cypress": "^5.6.0",
     "cypress-audit": "^0.2.4",
     "eslint": "^7.16.0",
