--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "cleandb": "node db/scripts/cleanup_scheduled_calls.js",
     "db:seed": "node db/scripts/seed_database.js",
     "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
+    "dbmigrate-local-mssql": "db-migrate --migrations-dir 'db/migrations/' -e local-mssql",
+    "dbmigrate-dev-mssql": "db-migrate --migrations-dir 'db/migrations/' -e development-mssql",
     "dbmigratetest": "db-migrate --migrations-dir 'db/migrations/' -e test",
     "dbmigratedry": "db-migrate --dry-run --migrations-dir 'db/migrations/'",
     "postinstall": "test -n \"$NONPMPOSTINSTALL\" || npm run build"
