test: subject: include package json scripts

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
     "db-migrate": "^0.11.11",
+    "db-migrate-mssql": "^2.1.0",
     "db-migrate-pg": "^1.2.1",
     "dotenv-load": "^2.0.0",
     "express": "^4.17.1",
