--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mockdate": "^2.0.5",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "mssql": "^6.3.0",
     "nanoid": "^3.1.3",
     "next": "9.5.4",
     "next-absolute-url": "^1.2.2",
