--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "review": {
       "addons": ["heroku-postgresql:hobby-dev"],
       "scripts": {
-        "postdeploy": "psql -f 'db/seeds.sql' $PG_DB_URL"
+        "postdeploy": "psql -f 'db/migrations/seed/sqls/20201222000000-seeds.sql' $PG_DB_URL"
       }
     }
   },
