--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "moment-duration-format": "^2.3.2",
     "mssql": "^6.3.0",
     "nanoid": "^3.1.3",
-    "next": "9.5.4",
+    "next": "^10.0.4",
     "next-absolute-url": "^1.2.2",
     "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.1.0",
