--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "nanoid": "^3.1.20",
-    "next": "9.5.4",
+    "next": "^10.0.4",
     "next-absolute-url": "^1.2.2",
     "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.1.0",
