--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "db:seed": "node db/scripts/seed_database.js",
     "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
     "dbmigrate-dev-mssql": "db-migrate --migrations-dir 'db/migrations/' -e development-mssql",
+    "dbmigrate-test-mssql": "db-migrate --migrations-dir 'db/migrations/' -e test-mssql",
     "dbmigratetest": "db-migrate --migrations-dir 'db/migrations/' -e test",
     "dbmigratedry": "db-migrate --dry-run --migrations-dir 'db/migrations/'",
     "postinstall": "test -n \"$NONPMPOSTINSTALL\" || npm run build"
