--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -208,6 +208,8 @@ jobs:
       - name: run mssql migration tests
         run: |
           bin/setup_test_mssql_docker.sh
+        env:
+          APP_ENV: test-mssql
 
   # tag-and-release:
   #   runs-on: ubuntu-latest
