--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -205,9 +205,7 @@ jobs:
       #     PG_TEST_DB_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
       #     APP_ENV: test
 
-      - name: run mssql migration tests
-        run: |
-          bin/setup_test_mssql_docker.sh
+      - name: "Write environment"
         env:
           APP_ENV: test-mssql
           MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
@@ -215,6 +213,19 @@ jobs:
           MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
           MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
           MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
+        run: |
+          bin/write_environment.sh
+
+      - name: run mssql migration tests
+        run: |
+          bin/setup_test_mssql_docker.sh
+        # env:
+        #   APP_ENV: test-mssql
+        #   MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
+        #   MSQL_TEST_DB_USER: ${{ secrets.MSQL_TEST_DB_USER }}
+        #   MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
+        #   MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
+        #   MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
 
   # tag-and-release:
   #   runs-on: ubuntu-latest
