--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "query-string": "^6.12.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "tedious": "^9.2.3",
     "uuid": "^8.1.0",
     "uuid-validate": "0.0.3",
     "winston": "^3.3.3"
