--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -214,7 +214,7 @@ jobs:
           MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
           MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
           MSQL_TEST_DB_USER: sa
-          MSQL_TEST_DB_PASSWORD: P@55w0rd
+          MSQL_TEST_DB_PASSWORD: abcdef
           MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
           MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
         run: |
@@ -232,7 +232,7 @@ jobs:
           MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
           MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
           MSQL_TEST_DB_USER: sa
-          MSQL_TEST_DB_PASSWORD: P@55w0rd
+          MSQL_TEST_DB_PASSWORD: abcdef
           MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
           MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
 
