--- a/docker/mssql/docker-compose-test.yml
+++ b/docker/mssql/docker-compose-test.yml
@@ -16,4 +16,4 @@ services:
     command: sh -c ' chmod +x ./entrypoint-test.sh; ./entrypoint-test.sh & /opt/mssql/bin/sqlservr;'
     environment:
       ACCEPT_EULA: Y
-      SA_PASSWORD: P@55w0rd
+      SA_PASSWORD: abcdef
