--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -215,7 +215,7 @@ jobs:
           MSQL_DB_POOL_IDLE_TIMEOUT: 30000
           MSQL_TEST_DB_USER: sa
           MSQL_TEST_DB_PASSWORD: abcdef
-          MSQL_TEST_DB_SERVER: localhost
+          MSQL_TEST_DB_SERVER: 127.0.0.1
           MSQL_TEST_DB_NAME: nhs_virtual_visit_test
         run: |
           bin/write_environment.sh
@@ -237,7 +237,7 @@ jobs:
           MSQL_DB_POOL_IDLE_TIMEOUT: 30000
           MSQL_TEST_DB_USER: sa
           MSQL_TEST_DB_PASSWORD: abcdef
-          MSQL_TEST_DB_SERVER: localhost
+          MSQL_TEST_DB_SERVER: 127.0.0.1
           MSQL_TEST_DB_NAME: nhs_virtual_visit_test
 
   # tag-and-release:
