--- a/docker/mssql/docker-compose.yml
+++ b/docker/mssql/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mssql:
-    image: mcr.microsoft.com/mssql/server:latest
+    image: mcr.microsoft.com/mssql/server:2017-GA-ubuntu
     container_name: nhs-virtual-visit
     ports:
       - 1433:1433
