fix: subject: update mssql test server script

--- a/.github/workflows/gha-mssql-ci.yml
+++ b/.github/workflows/gha-mssql-ci.yml
@@ -204,36 +204,35 @@ jobs:
       #   env:
       #     PG_TEST_DB_URL: postgresql://postgres:postgres@localhost:5432/nhs-virtual-visit-test
       #     APP_ENV: test
-      - name: "Write environment"
-        env:
-          APP_ENV: test-mssql
-          MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
-          MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
-          MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
-          MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
-          MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
-          MSQL_TEST_DB_USER: ${{ secrets.MSQL_TEST_DB_USER }}
-          MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
-          MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
-          MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
-        run: |
-          bin/write_environment.sh
+      # - name: "Write environment"
+      #   env:
+      #     APP_ENV: test-mssql
+      #     MSQL_DB_DRIVER: ${{ secrets.MSQL_DB_DRIVER }}
+      #     MSQL_DB_PORT: ${{ secrets.MSQL_DB_PORT }}
+      #     MSQL_DB_POOL_MAX: ${{ secrets.MSQL_DB_POOL_MAX }}
+      #     MSQL_DB_POOL_MIN: ${{ secrets.MSQL_DB_POOL_MIN }}
+      #     MSQL_DB_POOL_IDLE_TIMEOUT: ${{ secrets.MSQL_DB_POOL_IDLE_TIMEOUT }}
+      #     MSQL_TEST_DB_USER: ${{ secrets.MSQL_TEST_DB_USER }}
+      #     MSQL_TEST_DB_PASSWORD: ${{ secrets.MSQL_TEST_DB_PASSWORD }}
+      #     MSQL_TEST_DB_SERVER: ${{ secrets.MSQL_TEST_DB_SERVER }}
+      #     MSQL_TEST_DB_NAME: ${{ secrets.MSQL_TEST_DB_NAME }}
+      #   run: |
+      #     bin/write_environment.sh
       - name: run mssql migration tests
         run: |
           bin/setup_test_mssql_docker.sh
         #     npm run test:migration
-
-        # env:
-        #   APP_ENV: test-mssql
-        #   MSQL_DB_DRIVER: mssql
-        #   MSQL_DB_PORT: 1433
-        #   MSQL_DB_POOL_MAX: 15
-        #   MSQL_DB_POOL_MIN: 5
-        #   MSQL_DB_POOL_IDLE_TIMEOUT: 30000
-        #   MSQL_TEST_DB_USER: sa
-        #   MSQL_TEST_DB_PASSWORD: P@55w0rd
-        #   MSQL_TEST_DB_SERVER: localhost
-        #   MSQL_TEST_DB_NAME: nhs_virtual_visit_test
+        env:
+          APP_ENV: test-mssql
+          MSQL_DB_DRIVER: mssql
+          MSQL_DB_PORT: 1433
+          MSQL_DB_POOL_MAX: 15
+          MSQL_DB_POOL_MIN: 5
+          MSQL_DB_POOL_IDLE_TIMEOUT: 30000
+          MSQL_TEST_DB_USER: sa
+          MSQL_TEST_DB_PASSWORD: P@55w0rd
+          MSQL_TEST_DB_SERVER: localhost
+          MSQL_TEST_DB_NAME: nhs_virtual_visit_test
 
   # tag-and-release:
   #   runs-on: ubuntu-latest
